--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -8,59 +8,57 @@
             <thead>
                 <tr>
                     <th>Day / Time</th>
-                    {% for time in ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
+                    {% set times = ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
+                    {% for time in times %}
                         <th>{{ time }}</th>
                     {% endfor %}
                 </tr>
             </thead>
             <tbody>
-            {% set times = ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
             {% for day in ["MON", "TUE", "WED", "THU", "FRI"] %}
-            <tr>
-                <td><strong>{{ day }}</strong></td>
+                <tr>
+                    <td><strong>{{ day }}</strong></td>
+                    {% set skip = 0 %}
+                    {% for time in times %}
+                        {% if skip > 0 %}
+                            {% set skip = skip - 1 %}
+                            {% continue_loop = true %}
+                        {% else %}
+                            {% set matched_row = None %}
+                            {% set span = 1 %}
 
-                {% set skip = 0 %}
-                {% for time in times %}
-                    {% if skip > 0 %}
-                        {% set skip = skip - 1 %}
-                        {% continue %}
-                    {% endif %}
-
-                    {% set matched_row = None %}
-                    {% set span = 1 %}
-
-                    {% for row in timetable_rows %}
-                        {% if row.classDay == day %}
-                            {% set start = row.classTime.split('-')[0].strip() %}
-                            {% set end = row.classTime.split('-')[1].strip() %}
-                            {% if time == start %}
-                                {% set matched_row = row %}
-                                {% if end in times %}
-                                    {% set span = times.index(end) - times.index(start) %}
-                                {% else %}
-                                    {% set span = 1 %}
+                            {% for row in timetable_rows %}
+                                {% if row.classDay == day %}
+                                    {% set start = row.classTime.split('-')[0].strip() %}
+                                    {% set end = row.classTime.split('-')[1].strip() %}
+                                    {% if time == start %}
+                                        {% set matched_row = row %}
+                                        {% if end in times %}
+                                            {% set span = times.index(end) - times.index(start) %}
+                                        {% else %}
+                                            {% set span = 1 %}
+                                        {% endif %}
+                                        {% set skip = span - 1 %}
+                                    {% endif %}
                                 {% endif %}
-                                {% break %}
+                            {% endfor %}
+
+                            {% if matched_row %}
+                                <td colspan="{{ span }}" style="background:#f8f9fa; border:1px solid #ccc; padding:6px;">
+                                    <strong>Course:</strong> <i>{{ matched_row.courseName }}</i><br>
+                                    <strong>Type:</strong> <i>{{ matched_row.classType }}</i><br>
+                                    <strong>Room:</strong> <i>{{ matched_row.classRoom }}</i><br>
+                                    <strong>Sections:</strong><br>
+                                    {% for intake, code, section in matched_row.combined %}
+                                        <i>{{ intake }} | {{ code }} | {{ section }};</i><br>
+                                    {% endfor %}
+                                </td>
+                            {% else %}
+                                <td></td>
                             {% endif %}
                         {% endif %}
                     {% endfor %}
-
-                    {% if matched_row %}
-                        <td colspan="{{ span }}" style="background:#f8f9fa; border:1px solid #ccc; padding:6px;">
-                            <strong>Course:</strong> <i>{{ matched_row.courseName }}</i><br>
-                            <strong>Type:</strong> <i>{{ matched_row.classType }}</i><br>
-                            <strong>Room:</strong> <i>{{ matched_row.classRoom }}</i><br>
-                            <strong>Sections:</strong><br>
-                            {% for intake, code, section in matched_row.combined %}
-                                <i>{{ intake }} | {{ code }} | {{ section }};</i><br>
-                            {% endfor %}
-                        </td>
-                        {% set skip = span - 1 %}
-                    {% else %}
-                        <td></td>
-                    {% endif %}
-                {% endfor %}
-            </tr>
+                </tr>
             {% endfor %}
             </tbody>
         </table>
