--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -17,35 +17,27 @@
                 {% for day in ["MON", "TUE", "WED", "THU", "FRI"] %}
                 <tr>
                     <td><strong>{{ day }}</strong></td>
-                    {% set current_hour = 7 %}
-                    {% if current_hour <= 23 %}
-                        {% set filled = False %}
+                    {% for time in ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
+                    <td>
                         {% for row in timetable_rows %}
                             {% if row.classDay == day %}
-                                {% set start_hour = row.classStart.split(':')[0]|int %}
-                                {% set end_hour = row.classEnd.split(':')[0]|int %}
-                                {% if current_hour == start_hour %}
-                                    <td colspan="{{ end_hour - start_hour }}">
-                                        <div style="border:1px solid #ccc; padding:4px; background:#f8f9fa;">
-                                            <strong>Course:</strong> <i>{{ row.courseName }}</i><br>
-                                            <strong>Class Type:</strong> <i>{{ row.classType }}</i><br>
-                                            <strong>Room:</strong> <i>{{ row.classRoom }}</i><br>
-                                            <strong>Sections:</strong><br>
-                                            {% for intake, code, section in row.combined %}
-                                                <i>{{ intake }} | {{ code }} | {{ section }};</i><br>
-                                            {% endfor %}
-                                        </div>
-                                    </td>
-                                    {% set current_hour = end_hour %}
-                                    {% set filled = True %}
-\                                {% endif %}
+                                {% set start = row.classTime.split('-')[0].strip() %}
+                                {% set end = row.classTime.split('-')[1].strip() %}
+                                {% if time >= start and time < end %}
+                                    <div style="border:1px solid #ccc; padding:4px; background:#f8f9fa;">
+                                        <strong>Course</strong>:<br><i>{{ row.courseName }}</i><br>
+                                        <strong>Class Type</strong>: <i>{{ row.classType }}</i><br>
+                                        <strong>Room</strong>: <i>{{ row.classRoom }}</i><br>
+                                        <strong>Sections</strong>: <br>
+                                        {% for intake, code, section in row.combined %}
+                                            <i>{{ intake }} | {{ code }} | {{ section }};</i><br>
+                                        {% endfor %}
+                                    </div>
+                                {% endif %}
                             {% endif %}
                         {% endfor %}
-                        {% if not filled %}
-                            <td></td>
-                            {% set current_hour = current_hour + 1 %}
-                        {% endif %}
-                    {% endif %}
+                    </td>
+                    {% endfor %}
                 </tr>
                 {% endfor %}
             </tbody>
@@ -53,3 +45,5 @@
     </div>
 </div>
 {% endblock %}
+
+
