--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -4,15 +4,14 @@
 {% block content %}
     {% if user_level == 1 %}
         <div class="menu-grid" style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 1%; width: 100%;;">
-            <div class="dashboard-row" style="grid-template-columns: repeat(7, 1fr);">
+            <div class="menu-section">
                 <div class="dashboard-frame">
                     <h3>Cumulative Invigilation Hour</h3>
                     <p class="dashboard-text" style="color:green;">{{ user_invigilationHour }}</p>
                 </div>
-                <div class="dashboard-frame">
-                    <h3>Pending Cumulative Invigilation Hour</h3>
-                    <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour   }}</p>
-                </div>
+            </div>
+
+            <div class="menu-section">
                 <div class="dashboard-frame">
                     <h3>Pending Cumulative Invigilation Hour</h3>
                     <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour   }}</p>
