--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -2,19 +2,19 @@
 {% extends "user/userBase.html" %}
 {% block title %}Homepage{% endblock %}
 {% block content %}
+    <h1>Welcome Back</h1>
     {% if user_level == 1 %}
+    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
         <div class="menu-section">
-            <div class="dashboard-row">
-                <div class="dashboard-frame">
-                    <h3>Cumulative Invigilation Hour</h3>
-                    <p class="dashboard-text" style="color:green;">{{ user_invigilationHour }}</p>
-                </div>
-                <div class="dashboard-frame">
-                    <h3>Pending Invigilation Hour</h3>
-                    <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour   }}</p>
-                </div>
-            </div>
+            <h3>Cumulative Invigilation Hour</h3>
+            <p class="dashboard-text" style="color:green;">{{ user_invigilationHour }}</p>
         </div>
+
+        <div class="menu-section">
+            <h3>Pending Invigilation Hour</h3>
+            <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour   }}</p>
+        </div>
+    </div>
     {% endif %}
 
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
