--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -4,17 +4,17 @@
 {% block content %}
     <h1>Welcome Back</h1>
     {% if user_level == 1 %}
-    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
-        <div class="menu-section">
+    <div class="dashboard-row">
+        <div class="dashboard-frame">
             <h3>Cumulative Invigilation Hour</h3>
             <p class="dashboard-text" style="color:green;">{{ user_invigilationHour }}</p>
         </div>
 
-        <div class="menu-section">
+        <div class="dashboard-frame">
             <h3>Pending Invigilation Hour</h3>
             <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour   }}</p>
         </div>
-    </div>
+    </div><br>
     {% endif %}
 
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
